Added search attributes and the patient card

--- a/openmrs/apps/registration/registrationCardLayout/print.html
+++ b/openmrs/apps/registration/registrationCardLayout/print.html
@@ -115,7 +115,7 @@
                 </tr>
                 <tr>
                     <td class="registrationCard-details-name">
-                        <span class="hindi-text">Tehsil</span>
+                        <span class="hindi-text">Mkoa</span>
                     </td>
                     <td class="registrationCard-details-seperator"> :  </td>
                     <td>{{patient.address.address3}} </td>
