--- a/openmrs/apps/registration/supplementalPaperLayout/print.html
+++ b/openmrs/apps/registration/supplementalPaperLayout/print.html
@@ -4,48 +4,48 @@
     </style>
     <div class="row">
         <div class="left">
-            <span class="label">ओपीडी क्र.:</span>
+            <span class="label">Visit Details:</span>
             <span></span>
         </div>
         <div class="right">
-            <span class="label">दिनांक:</span>
+            <span class="label">Visit Date:</span>
             <span>{{today | date:'dd/MM/yyyy'}}</span>
         </div>
     </div>
     <div class="row">
         <div class="left">
-            <span class="label">पंजी. क्र.:</span>
+            <span class="label">Patient Id:</span>
             <span>{{patient.primaryIdentifier.identifier}}</span>
         </div>
         <div class="right">
-            <span class="label">गाँव:</span>
+            <span class="label">Kijiji:</span>
             <span>{{patient.address.cityVillage}}</span>
         </div>
     </div>
     <div class="row">
         <div class="left">
-            <span class="label">नाम:</span>
+            <span class="label">Name:</span>
             <span>{{patient.fullNameLocal() || patient.name}}</span>
         </div>
         <div class="right">
-            <span class="label">जिला:</span>
+            <span class="label">District:</span>
             <span>{{patient.address.countyDistrict}}</span>
         </div>
     </div>
     <div class="row">
         <div class="left">
-            <span class="label">पिता/पति का नाम:</span>
+            <span class="label">Primary Relative:</span>
             <span>{{patient.primaryRelative}}</span>
         </div>  
         <div class="right">
-            <span class="label">उम्र/लिंग:</span>
+            <span class="label">Gender:</span>
             <span>{{patient.age.years || "0"}}</span>
             <span ng-show="patient.gender">/ {{patient.gender}}</span>
         </div>
     </div>
     <div class="row">
         <div class="left">
-            <span class="label">वज़न:</span>
+            <span class="label">Weight:</span>
             <span>{{obs.WEIGHT}}</span>
         </div>
     </div>
